refactor: rename Patch to Put for user-related requests and responses
