# docs/swagger.json
@@ -210,7 +210,7 @@
 			"PostUserRequest": {
 				"$ref": "#/components/schemas/infer_typeofcreateUserSchema_"
 			},
-			"PatchUserResponse": {
+			"PutUserResponse": {
 				"$ref": "#/components/schemas/HttpResponse_UserResponse_"
 			},
 			"infer_typeofupdateUserSchema_": {
@@ -235,7 +235,7 @@
 				],
 				"type": "object"
 			},
-			"PatchUserRequest": {
+			"PutUserRequest": {
 				"$ref": "#/components/schemas/infer_typeofupdateUserSchema_"
 			},
 			"HttpResponse_undefined_": {
@@ -300,10 +300,10 @@
 				],
 				"type": "object"
 			},
-			"PatchCurrentUserResponse": {
+			"PutCurrentUserResponse": {
 				"$ref": "#/components/schemas/HttpResponse_UserResponse_"
 			},
-			"PatchCurrentUserRequest": {
+			"PutCurrentUserRequest": {
 				"$ref": "#/components/schemas/infer_typeofupdateUserSchema_"
 			},
 			"RolePermissionResponse": {
@@ -738,7 +738,7 @@
 					}
 				]
 			},
-			"patch": {
+			"put": {
 				"operationId": "UpdateUser",
 				"responses": {
 					"200": {
@@ -746,7 +746,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/PatchUserResponse"
+									"$ref": "#/components/schemas/PutUserResponse"
 								}
 							}
 						}
@@ -776,7 +776,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/PatchUserRequest"
+								"$ref": "#/components/schemas/PutUserRequest"
 							}
 						}
 					}
@@ -842,7 +842,7 @@
 				],
 				"parameters": []
 			},
-			"patch": {
+			"put": {
 				"operationId": "UpdateCurrentUser",
 				"responses": {
 					"200": {
@@ -850,7 +850,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/PatchCurrentUserResponse"
+									"$ref": "#/components/schemas/PutCurrentUserResponse"
 								}
 							}
 						}
@@ -870,7 +870,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/PatchCurrentUserRequest"
+								"$ref": "#/components/schemas/PutCurrentUserRequest"
 							}
 						}
 					}
