# src/common/types/me.ts
@@ -4,5 +4,5 @@ import { updateUserSchema } from '../../modules/users/schemas/UserSchema';
 
 export type GetCurrentUserResponse = HttpResponse<UserResponse>;
 
-export type PatchCurrentUserRequest = z.infer<typeof updateUserSchema>;
-export type PatchCurrentUserResponse = HttpResponse<UserResponse>;
+export type PutCurrentUserRequest = z.infer<typeof updateUserSchema>;
+export type PutCurrentUserResponse = HttpResponse<UserResponse>;
